# UniGraphBuilder

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/unigraph/: cli.py  config.py  edges.py  idmap.py
src/unigraph/io/: reader.py  writer.py
src/unigraph/parsers/: entry.py  refs.py
tests/: test_edges.py  test_idmap.py  test_io.py  test_parsers.py  test_taxid.py  test_unique_edges.py
