[tool.poetry]
name = "unigraphbuilder"
version = "0.1.0"
description = "A tool for creating graphs using the Uniprot database"
authors = ["Leonid Lodygin"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "unigraph", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.4.0"
pytest = "^9.0.2"

[tool.poetry.scripts]
unigraph = "unigraph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
